[project]
name = "dms-variant"
version = "0.1.0"
description = "Lightweight parser of single- and multi-mutation variants in DMS experiment results"
authors = [
    { name = "Jingyou Rao", email = "roseraosh@gmail.com" },
    { name = "Mingsen Wang", email = "mingsen.wang.sh@gmail.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.poetry]
packages = [{ include = "dms_variant", from = "src" }]

[tool.poetry.group.dev.dependencies]
ipykernel = ">=6.29"
ipywidgets = ">=8.1"
black = ">=25"
isort = ">=6"
pylint = ">=3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
